style.css
/*
Theme Name: Vendd
Theme URI: https://easydigitaldownloads.com/downloads/vendd
Author: EDD Team
Author URI: https://easydigitaldownloads.com
Description: Vendd is a full-featured marketplace theme for Easy Digital Downloads and supporting extensions.
Version: 1.1.5
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Text Domain: vendd
Domain Path: /languages/
Tags:

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned with others.

Vendd is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.

Font Awesome http://fortawesome.github.io/Font-Awesome/license/
Font Awesome Licenses:
	SIL Open Font License http://scripts.sil.org/OFL
	MIT License http://opensource.org/licenses/mit-license.html
	CC BY 3.0 License – http://creativecommons.org/licenses/by/3.0/
	Copyright: Dave Gandy, http://fontawesome.io
*/


/*--------------------------------------------------------------
 ******************** DO NOT EDIT THIS FILE ********************
 *
 * If you would like to override theme styles, use a child theme or a
 * custom CSS plugin that allows you to safely override styles that will
 * not be erased during theme updates.
 *
 * Example: https://wordpress.org/plugins/reaktiv-css-builder/
--------------------------------------------------------------*/


/*--------------------------------------------------------------
*** Main theme colors - grouped for easy override w/ customizer
--------------------------------------------------------------*/
#masthead,
input[type="submit"],
input[type="button"],
.vendd-fes-dashboard-template .fes-form .fes-submit input[type="submit"],
.vendd-edd-fes-shortcode .fes-form .fes-submit input[type="submit"],
.vendd-vendor-contact .fes-form .fes-submit input[type="submit"],
button,
.more-link,
.by-post-author,
.main-navigation ul li:hover > ul,
#edd_download_pagination .page-numbers.current,
.edd_pagination .page-numbers.current,
div[class*="fes-"] > .page-numbers.current,
div[id*="edd_commissions_"] .page-numbers.current,
#edd_download_pagination .page-numbers:hover,
.edd_pagination .page-numbers:hover,
div[class*="fes-"] > .page-numbers:hover,
div[id*="edd_commissions_"] .page-numbers:hover {
	background: #428bca;
}
a,
.comment-full:hover > .reply > .comment-reply-link {
	color: #428bca;
}
h1, h2 {
	border-color: #428bca;
}


/*--------------------------------------------------------------
>>> Reset
--------------------------------------------------------------*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
	border: 0;
	margin: 0;
	outline: 0;
	padding: 0;
	vertical-align: baseline;
}
html {
	overflow-y: scroll;
	-webkit-text-size-adjust: 100%;
	-ms-text-size-adjust: 100%;
}
*,
*:before,
*:after {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	-ms-word-wrap: break-word;
	word-wrap: break-word;
}
body {
	background: #f1f1f1;
}
article,
aside,
details,
figcaption,
figure,
footer,
header,
main,
nav,
section {
	display: block;
}
ol,
ul {
	list-style: none;
}
table {
	border-collapse: separate;
	border-spacing: 0;
}
caption,
th,
td {
	font-weight: normal;
	text-align: left;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
	content: "";
}
blockquote,
q {
	quotes: "" "";
}
a:focus {
	outline: thin dotted;
}
a:hover,
a:active {
	outline: 0;
}
a img {
	border: 0;
	vertical-align: bottom;
}


/*--------------------------------------------------------------
>>> Structure Elements
--------------------------------------------------------------*/
#page {
	background: #3d3d3d;
	margin: 0 auto;
	max-width: 1200px;
}
#info-bar {
	position: relative;
	color: #ddd;
	font-size: .87em;
	padding: 10px 40px;
	min-height: 39px;
}
#masthead {
	position: relative;
}
#content {
	background: #fff;
	padding: 40px;
}

/* primary content */
#primary {
	float: left;
	padding-right: 40px;
	width: 68%;
}
#secondary {
	float: left;
	width: 32%;
	font-size: .87em;
}
.vendd-no-sidebar #primary {
	float: none;
	margin: 0 auto;
}
.vendd-downloads-template #primary,
.post-type-archive-download #primary,
.tax-download_category #primary,
.tax-download_tag #primary,
.vendd-advanced-search-results #primary {
	float: none;
	padding: 0;
	width: 100%;
}
.post-type-archive-download #primary .store-404 {
	margin: 0 auto;
	width: 68%;
}
.vendd-focus-page-template #focus-page-primary {
	float: none;
	padding-right: 0;
	margin: 0 auto;
	max-width: 722px;
}


/*--------------------------------------------------------------
>>> Typography
--------------------------------------------------------------*/
body,
button,
input,
select,
textarea {
	color: #555;
	font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
	font-size: 15px;
	line-height: 1.6;
}
h1, h2, h3, h4, h5, h6,
.widget-title,
.post-nav-title,
.comments-title {
	clear: both;
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
	line-height: 1.4;
	font-weight: 400;
	margin-bottom: .4em;
}
h1, h2 {
	font-size: 2.4em;
}
h3, h4 {
	font-size: 1.87em;
}
h5, h6 {
	font-size: 1.4em;
}
h4, h6 {
	color: #757575;
}
p {
	margin-bottom: 1.5em;
}
b,
strong {
	font-weight: bold;
}
dfn,
cite,
em,
i {
	font-style: italic;
}
blockquote {
	background: #fafafa;
	padding: 20px;
	border: 1px solid #F2F2F2;
	border-radius: 4px;
	margin: 0 0 1.5em 1.5em;
}
blockquote p {
	color: #999;
	font-style: italic;
}
blockquote p:last-child {
	margin-bottom: 0;
}
address {
	margin: 0 0 1.5em;
}
/* ... */

